# LVGL-UI-Automation-Framework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  lv_conf.h
.github/workflows/: ci.yml
include/: test_harness.h
python-client/: README.md  demo.py  lvgl_client.py  pyproject.toml  pytest.ini  requirements.txt  test_coordinates.py
python-client/tests/: test_connection_check.py  test_simple_demo.py
src/: main.c  screenshot.c  tcp_server.c  test_harness.c  ui_watch.c
